--- a/package.json
+++ b/package.json
@@ -1,16 +1,15 @@
 {
-  "name": "refine-firebase",
-  "version": "1.2.1",
+  "name": "@armable/refine-firebase",
+  "version": "1.3.0",
   "description": "Firebase Tool for Refine",
   "main": "lib/index.js",
-  "author": "Resul TURAN",
+  "author": "Resul TURAN fork",
   "license": "MIT",
   "keywords": [
     "Refine",
     "Firebase"
   ],
   "devDependencies": {
-    "@pankod/refine-core": "^3.95.3",
     "@types/uuid": "^8.3.1",
     "typescript": "^4.9.4"
   },
@@ -19,7 +18,9 @@
     "build": "tsc"
   },
   "dependencies": {
-    "firebase": "^9.16.0",
+    "@pankod/refine-core": "^3.103.0",
+    "@refinedev/core": "^4.47.0",
+    "firebase": "^10.8.0",
     "uuid": "^9.0.0"
   },
   "files": [
@@ -27,6 +28,6 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/rturan29/refine-firebase.git"
+    "url": "https://github.com/EmiHodoroaba/refine-firebase"
   }
 }
